src/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'dana';
  src: url("/fonts/dana.woff"), url("/fonts/dana.woff2");
  font-weight: normal;
  font-display: swap;
}

@font-face {
  font-family: 'dana-bold';
  src: url("/fonts/dana-bold.woff"), url("/fonts/dana-bold.woff2");
  font-weight: bold;
  font-display: swap;
}

:root {
  --whiteColor: #fff;
  --blackColor: #121315;
  --primaryColor: #5660f2;
  --lightColor: #dde1e6;
  --brightColor: #F6F7F9;
  --darkColor: #4A4E57;
  --dangerColor: #fa5555;
  --successColor: #45c26f;
  --warningColor: #E1BC29;
  --blueColor: #0fa5e9;
}

.swiper-button-next,
.swiper-button-prev {
  background: var(--primaryColor);
  color: var(--whiteColor) !important;
  box-shadow: 0 0 1.5rem var(--primaryColor);
  width: 4rem !important;
  height: 4rem !important;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 4rem;
  scale: 0.5;
  visibility: hidden;
}

.swiper-button-next::after,
.swiper-button-prev::after {
  scale: 0.65;
}

@media (min-width: 640px) {
  .swiper-button-next,
  .swiper-button-prev {
    visibility: visible;
  }
}

@layer base {
  * {
    @apply p-0 m-0 border-0 outline-0 list-none box-border !transition-all duration-150 ease-linear select-none;
    text-decoration: none;
    font-family: 'dana';
    font-size: 0.95rem;
  }

  body {
    @apply bg-white w-full max-w-full h-screen min-h-screen relative;
  }

  ::-webkit-scrollbar {
    width: 5px;
    height: 5px;
  }

  ::-webkit-scrollbar-track {
    background: none;
  }

  ::-webkit-scrollbar-thumb {
    background: var(--primaryColor);
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-family: 'dana-bold';
  }

  button {
    background: none;
  }

  input,
  p,
  p * {
    @apply select-text;
  }

  a {
    @apply text-black;
  }

  input:-webkit-autofill,
  input:-webkit-autofill:hover, 
  input:-webkit-autofill:focus {
    box-shadow: 0 0 0px 1000px var(--whiteColor) inset;
  }
}

@layer utilities {
  .dana-base {
    font-family: 'dana';
    font-weight: normal;
  }

  .dana-bold {
    font-family: 'dana-bold';
    font-weight: bold;
  }
}

@layer components {
  #root {
    @apply bg-white w-full max-w-full h-full relative;
  }

  .wrapper {
    @apply w-full px-3 mx-auto sm:px-6 sm:max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-[1150px]
  }

  .current-height {
    height: calc(100dvh - 4.5rem);
  }

  .title {
    @apply w-full flex items-center;
  }

  .title > *:last-child,
  .title > *:last-child span {
    @apply dana-bold text-xl leading-relaxed mx-1 sm:text-2xl md:mx-2;
  }

  .title svg {
    @apply text-jv-primary w-7 h-7 ml-2 md:w-8 md:h-8;
  }

  .active-circle {
    fill: var(--primaryColor);
  }

  #iran-svg circle {
    transition: 1s ease !important;
  }

  .honor-box {
    @apply w-1/2 flex flex-col items-center md:w-max;
  }

  .honor-box svg {
    @apply w-10 h-10 text-jv-primary sm:w-14 sm:h-14;
  }

  .accordion-check:checked ~ .accordion-content {
    max-height: 100vh;
  }

  .accordion-content {
    max-height: 0;
  }
  
  .list-scrollbar::-webkit-scrollbar {
    width: 3px;
    height: 3px;
  }

  .list-scrollbar::-webkit-scrollbar-thumb {
    background: var(--lightColor);
    border-radius: 3px;
  }
}

@layer components {
  header nav li {
    @apply ml-5 last:ml-0 xl:ml-7;
  }

  .nav-link {
    @apply h-full flex justify-center items-center hover:text-jv-primary;
  }

  .btn {
    @apply w-max h-10 flex justify-center items-center px-5 rounded cursor-pointer hover:brightness-110;
  }

  .btn-sm {
    @apply w-max h-8 flex justify-center items-center px-3 rounded cursor-pointer hover:brightness-110;
  }

  form .btn {
    @apply !h-12 border border-solid;
  }

  .btn * {
    @apply mr-3;
  }

  .btn-sm * {
    @apply mr-2;
  }

  .nav-link svg *,
  .btn svg,
  .btn-sm svg,
  .btn svg *,
  .btn-sm svg * {
    @apply !transition-none;
  }

  .btn-primary {
    @apply border-jv-primary bg-jv-primary text-white;
  }

  .btn-out-primary {
    @apply text-jv-primary border border-solid border-jv-primary hover:bg-jv-primary hover:text-white;
  }

  .btn-dark {
    @apply border-jv-dark bg-jv-dark text-white;
  }

  .btn-out-dark {
    @apply text-jv-dark border border-solid border-jv-dark hover-dark;
  }

  .hover-dark {
    @apply hover:bg-jv-dark hover:text-white;
  }

  .btn-light {
    @apply border-jv-light bg-jv-light text-jv-dark hover:brightness-105;
  }

  .btn-danger {
    @apply border-jv-danger bg-jv-danger text-white;
  }

  .btn-success {
    @apply border-jv-success bg-jv-success text-white;
  }
}

@layer components {
  .badge {
    @apply w-max flex justify-center items-center text-xs px-3 py-[1px] rounded-full;
  }

  .badge * {
    @apply mr-1.5 text-xs;
  }

  .badge-danger {
    @apply bg-red-100 text-jv-danger;
  }
}

@layer components {
  .input-bg {
    @apply bg-white text-jv-dark w-full h-12 border border-solid border-jv-dark flex justify-between items-center
    rounded relative hover:border-jv-primary;
  }

  .input {
    @apply bg-none absolute top-0 bottom-0 left-0 right-12 py-2 pl-5 rounded placeholder:opacity-75 
    focus:placeholder:opacity-100;
  }

  .input-icon {
    @apply absolute top-0 bottom-0 right-0 w-12 flex justify-center items-center;
  }

  .input-icon svg {
    @apply !w-6 !h-6;
  }

  .input-icon * {
    @apply duration-0;
  }
}

@layer components {
  .light-shadow {
    @apply shadow shadow-[#00000010];
  }
}

@layer components {
  .cubic-1 {
    transition-timing-function: cubic-bezier(.26,.32,.71,1);
  }

  .no-trans {
    @apply !transition-none;
  }
  
  .scroll-fade-down {
    @apply opacity-0 translate-y-12;
  }

  .show-mobile-menu {
    animation: show-mobile-menu 750ms ease-out;
  }

  @keyframes show-mobile-menu {
    0% {
      transform: scaleY(1) translateY(100%);
    }
    60% {
      transform: scaleY(1.02) translateY(0);
    }
    80% {
      transform: scaleY(0.99);
    }
    100% {
      transform: scaleY(1);
    }
  }

  .hide-mobile-menu {
    animation: hide-mobile-menu 350ms ease-in forwards;
  }
  
  @keyframes hide-mobile-menu {
    0% {
      transform: translateY(0);
    }
    100% {
      transform: translateY(100%);
    }
  }

  .fade {
    animation: fade 350ms ease;
  }
  
  @keyframes fade {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }
  
  .show-message-box {
    animation: show-message-box 1s ease forwards;
  }

  @keyframes show-message-box {
    0% {
      opacity: 0;
      transform: scale(0);
    }
    100% {
      opacity: 1;
      transform: scale(1);
    }
  }

  .hidden-message-box {
    animation: hidden-message-box 1s ease forwards;
  }

  @keyframes hidden-message-box {
    0% {
      opacity: 1;
      transform: scale(1);
    }
    100% {
      opacity: 0;
      transform: scale(0.5);
    }
  }
}

